--- a/eeshaan-test2-k8s-advanced/app.pipecd.yaml
+++ b/eeshaan-test2-k8s-advanced/app.pipecd.yaml
@@ -1,7 +1,7 @@
 apiVersion: pipecd.dev/v1beta1
 kind: KubernetesApp
 spec:
-  name: simple-old
+  name: simple-advanced
   labels:
     env: example
     team: product
