--- a/k8s-v1-advanced/app.pipecd.yaml
+++ b/k8s-v1-advanced/app.pipecd.yaml
@@ -1,7 +1,7 @@
 apiVersion: pipecd.dev/v1beta1
 kind: Application
 spec:
-  name: v1-wait-eeshaan
+  name: v1-advanced-eeshaan
   labels:
     owner: eeshaansa
     env: local
