--- a/v1-example-stage/app.pipecd.yaml
+++ b/v1-example-stage/app.pipecd.yaml
@@ -11,4 +11,4 @@ spec:
     stages:
       - name: EXAMPLE_HELLO
         with:
-          name: Eeshaan
+          name: Narendar Mudi (Lavdena Bhojnam)
